--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
             <div class="col-sm-12 col=md-6 col-lg-6 imagessss">
                 <center>
-                    <img id="corner" class="img-fluid  class" src="./images/greenspiderman.png" alt="img" fluid />
+                    <img   id="corner" class="img-fluid  class"  src="./images/greenspiderman.png" alt="img" fluid />
                 </center>
 
             </div>
@@ -95,7 +95,8 @@
         <div class="row">
             <div class="col-sm-12 col=md- col-lg-3  carddetails ">
                 <div>
-                    <img class="img-fluid" src="./images/image1.png" alt="img" fluid />
+              
+                    <a href="./home.html"> <img class="img-fluid" src="./images/image1.png" alt="img" fluid /></a>
                     <h4>boring gods</h4>
                     <p> lorem ipsum dolor sit amet,consectetur adipiscing elit,nam sed id pulvinar ultrices leo urna
                         accumsa imperdiet mattisx
